fixed a lot of bugs according to FindBugs